welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: Unmatched closing brace '}' ignored here
	}
        ^SnakeBuggle:23: error: Unmatched closing brace '}' ignored here
		}
                ^SnakeBuggle:34: error: Unmatched closing brace '}' ignored here
}
^